--- a/e-credit frontend/src/app/credit-form/credit-form.component.html
+++ b/e-credit frontend/src/app/credit-form/credit-form.component.html
@@ -30,7 +30,7 @@
 				<div class="field col-12 md:col-4">
 					<label htmlFor="CIN">CIN</label>
 					<input (input)="onCinChange()" pInputText id="CIN" type="number" formControlName="cin" required />
-					<div *ngIf="CredForm.get('cin')?.touched" class="text-danger">
+					<div *ngIf="CredForm.get('cin') === null" class="text-danger">
 						Le champ CIN est obligatoire.
 					  </div>
 					  <div *ngIf="CredForm.get('cin')?.hasError('pattern')" class="text-danger">
@@ -90,7 +90,7 @@
 				<div class="field col-12 md:col-6">
 					<label htmlFor="TypeCredit">Type Crédit</label>
 					<p-dropdown [options]="typeCreditDropdownItems" optionLabel="name" optionValue="value" placeholder="Choisir"
-						formControlName="type" (onBlur)="updateDocumentDropDownItems()"></p-dropdown>
+						formControlName="type" (onChange)="updatePieceJointe()"></p-dropdown>
 						<div *ngIf="CredForm.get('type')?.invalid && CredForm.get('type')?.touched" class="error-message">
 							Champ numCompte. Veuillez choisir une option.
 						</div>
@@ -105,7 +105,7 @@
 				<div class="field col-12 md:col-6">
 					<label htmlFor="Unite">Unité</label>
 					<p-dropdown [options]="uniteDropdownItems"  optionLabel="name" optionValue="value"  placeholder="Choisir"
-						formControlName="unite" [showClear]="true"></p-dropdown>
+						formControlName="unite" [showClear]="true" (onChange)="calculateNbrEcheance()"></p-dropdown>
 						<div *ngIf="CredForm.get('unite')?.invalid && CredForm.get('unite')?.touched" class="error-message">
 							Champ unite. Veuillez choisir une option.
 						</div>
@@ -208,28 +208,28 @@
 		<div class="col-12">
 			<div class="field col-12 md:col-12">
 
-				<p-table [value]="statutPieces" dataKey="id" [rowHover]="true" styleClass="p-datatable-gridlines"
+				<p-table  dataKey="id" [rowHover]="true" styleClass="p-datatable-gridlines"
 					responsiveLayout="scroll">
 
 					<ng-template pTemplate="header" let-statut>
 						<tr>
-							<th style="min-width: 18rem">
+							<th style="min-width: 13rem">
 								<div class="flex justify-content-between align-items-center">
 									Documents
 								</div>
 							</th>
-							<th style="min-width: 18rem">
+							<th style="min-width: 13rem">
 								<div class="flex justify-content-between align-items-center">
 									Obligatoire
 								</div>
 							</th>
-							<th style="min-width: 18rem">
+							<th style="min-width: 13rem">
 								<div class="flex justify-content-between align-items-center">
 									Statut
 
 								</div>
 							</th>
-							<th style="min-width: 18rem">
+							<th style="min-width: 13rem">
 								<div class="flex justify-content-between align-items-center">
 									Importer
 
@@ -239,21 +239,21 @@
 
 						</tr>
 						<tr>
-							<th>Bulletin de paie</th>
-							<th>Oui</th>
-							<th>{{ statutPieces[0] }}</th>
+							<th>{{piece.doc1}}</th>
+							<th>{{ piece.obligatoire1 }}</th>
+							<th>{{ piece.statut1 }}</th>
 							<th><p-fileUpload class=" mb-10 col-12 md:col-4" mode="basic" accept="image/*" [maxFileSize]="9999999"
 								label="importer" chooseLabel="importer" class="mr-2 inline-block" 
-								(onSelect)="onFileSelected($event)"></p-fileUpload></th>
+								(onSelect)="onFile1Selected($event)"></p-fileUpload></th>
 
 						</tr>
 						<tr>
-							<th>CIN</th>
-							<th>Oui</th>
-							<th>{{ statutPieces[1] }}</th>
+							<th>{{piece.doc2}}</th>
+							<th>{{ piece.obligatoire2}}</th>
+							<th>{{ piece.statut2 }}</th>
 							<th><p-fileUpload class=" mb-10 col-12 md:col-4" mode="basic" accept="image/*" [maxFileSize]="9999999"
 								label="importer" chooseLabel="importer" class="mr-2 inline-block" 
-								(onSelect)="onFileSelected($event)"></p-fileUpload></th>
+								(onSelect)="onFile2Selected($event)"></p-fileUpload></th>
 
 						</tr>
 
@@ -266,10 +266,7 @@
 				<div class="col-12">
 					<div class="flex flex-wrap gap-2">
 						<div class="field col-12 md:col-4 "></div>
-						<!-- <div class="field col-12 md:col-4 ">
-							<button pButton pRipple type="button" label="ajouter une pièce" (click)="showDialog2()"
-								class="p-button-rounded p-button-success"></button>
-						</div> -->
+						
 
 					</div>
 				</div>
@@ -355,35 +352,11 @@
 				</div>
 		</div>
 		<div class="flex justify-content-end gap-2">
-			<p-button label="Cancel" severity="secondary" (click)="visible = false" />
-			<!-- <p-button label="Save" (click)="close()"  /> -->
+			<!-- <p-button label="Cancel" severity="secondary" (click)="visible = false" /> -->
+			<p-button label="Cancel" severity="secondary"(click)="close()"  />
 			<p-button label="Save" (click)="enregistrerGarantie() " />
 		</div>
 	</form>
 
 </p-dialog>
 
-<p-dialog header="Ajouter une piece jointe" [modal]="true" [(visible)]="visible2" [style]="{ width: '25rem' }">
-	<form [formGroup]="PieceJointeForm" class="grid">
-		<div class="flex align-items-center gap-3 col-12">
-			<label for="document" class="font-semibold w-6rem field col-12 md:col-6">Document</label>
-			<p-dropdown [options]="documentDropdownItems" optionLabel="name" optionValue="value" placeholder="Choisir"
-				formControlName="document" [autoDisplayFirst]="false" class="col-12 md:col-6"></p-dropdown>
-		</div>
-		<div class="flex align-items-center gap-3 mb-10 col-12">
-			<div class="field col-12 md:col-3 "></div>
-			<p-fileUpload class=" mb-10 col-12 md:col-4" mode="basic" accept="image/*" [maxFileSize]="9999999"
-				label="importer" chooseLabel="importer" class="mr-2 inline-block" 
-				(onSelect)="onFileSelected($event)"></p-fileUpload>
-			<div class="field col-12 md:col-2 "></div>
-		</div>
-		<div class="flex justify-content-end gap-2 col-12">
-			<div class="field col-12 md:col-2 "></div>
-			<p-button label="Cancel" severity="secondary" (click)="close()" class="col-12 md:col-4" />
-			<!-- <p-button label="Save" (click)="close()"  /> -->
-			<p-button label="Save" (click)="enregistrerPiece() " class="col-12 md:col-4" />
-			<div class="field col-12 md:col-2 "></div>
-		</div>
-	</form>
-
-</p-dialog>
